2005-07-30  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sync/mbox.cxx (tryget,peak_item): initialize local variable
	to avoid compiler warning.
	
2005-06-21  Peter Korsgaard  <jacmet@sunsite.dk>

	* tests/kcache2.c (test_dcache_operation): Fixed compiler warnings
	about formats strings for diag_printf.

2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/tm_basic.cxx (_run_all_tests): Fixed compiler warning.

2004-12-15  Sergei Organov <osv@topconrd.ru>

	* cdl/scheduler.cdl: Correct the description of
	CYGIMP_KERNEL_SCHED_SORTED_QUEUES
	
2004-09-24  Nick Garnett  <nickg@ecoscentric.com>

	* src/sched/mlqueue.cxx (enqueue): Fix bug in sorted queue
	insertion: priority test was inverted. Spotted by TomChen.

2004-08-08  Bart Veer  <bartv@ecoscentric.com>

	* cdl/counters.cdl: add new option for the clock interrupt
	priority.

	* src/common/clock.cxx (Cyg_RealTimeClock): use this option.

2004-04-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/fptest.c (do_test): Silence aliasing warning when breaking
	doubles into two ints.

2004-04-11  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/kernel.sgml: Expanded the documentation about the use of
	CYG_FLAG_WAITMODE_CLR.

2004-03-27  Sebastien Couret	<sebastien.couret@elios-informatique.fr>

	* src/debug/dbg-thread-demux.c (dbg_thread_syscall_rmt): Only
	needed if CYGDBG_KERNEL_DEBUG_GDB_THREAD_SUPPORT is enabled.

2004-03-12  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/kapi.h: Add throw specifications throughout.
	* src/kapi.cxx: Ditto.
	* include/sched.inl: Move include of thread.inl further down to
	allow Cyg_Scheduler inlines to be defined first.
	* include/thread.inl: Reorder destructors section and include
	sched.inl right before it to solve mutual header dependency
	problems.

2004-03-04  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/kernel.sgml: Document cyg_thread_delete return value.

2004-02-19  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/kmutex3.c (cyg_start): Use CYG_TEST_NA.